Closed Bug 864842 Opened 11 years ago Closed 9 years ago

no reaction by Firefox on trying to open the local drive

Categories

(Core :: Networking: File, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: clemensprill, Unassigned)

Details

(Whiteboard: [necko-backlog])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130422 Firefox/23.0
Build ID: 20130422105838

Steps to reproduce:

I did the following steps to reproduce the bug:

1) Type 'G:\' in the address bar of Firefox and press enter to open the address

Notice: I have no CD or DVD in my local drive.


Actual results:

Firefox did nothing. Neither it shows an error nor it tries to search for the term on Google.


Expected results:

At least any kind of reaction should happen. Best is if it shows me the files in that path (as like as on FTPs or on sites with directory listings) or it shows me an error that this path is invalid.
This bug is present in Firefox version 23.0a1 (2013-04-22).

In this case the letter G is assigned to my local drive. So make sure you type your letter of your drive in the address bar. It may differ from mine.
Hi Clemens, as far as I can tell, the normal syntax to open a file on one of your local drives would be something like this:

file:///G:/

Does that give you a better result?
Trying this on a Mac results in an error page with this text:

The address wasn't understood
      
Firefox doesn't know how to open this address, because the protocol (g) isn't associated with any program.
        
You might need to install other software to open this address.

That's what I'd expect in Windows as well.
Flags: needinfo?(clemensprill)
the URL bar detects "c:" and changes it to "file:///c:/" (that function got added 10 years ago)
Nothing happens if you enter a drive letter from an existing drive without media (e.g. DVD-drive) and it doesn't matter if you enter "d:" or "file:///d:/"
Status: UNCONFIRMED → NEW
Component: Untriaged → Networking: File
Ever confirmed: true
Flags: needinfo?(clemensprill)
Product: Firefox → Core
Hello Liz Henry,

as Matthias Versen already replied to your question, I can approve that. There is no difference between file:///G:/ and my variant. I have tested this on Windows 7.

No error, crash, message, text, popup or similar appears/happens.
Attached patch bug-864842.patchSplinter Review
Windows returns ERROR_NOT_READY when there's no media in the drive. Trivial patch attached to categorize it as file not found (same behavior as Chromium).
Attachment #8561935 - Flags: review?(michal.novotny)
Attachment #8561935 - Flags: review?(michal.novotny) → review+
michal I think you should land this for jeff.. wdyt?
Flags: needinfo?(michal.novotny)
Whiteboard: [necko-backlog]
landed
Flags: needinfo?(michal.novotny)
https://hg.mozilla.org/mozilla-central/rev/638fd0da95ef
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: