Bug 864842 - Show error for browsing Windows drive without media, r=michal